// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> render matches default link snapshot 1`] = `
<Linkstyles__StyledLink
  bold={false}
  hard={false}
  inverse={false}
  onClick={[Function]}
  spaced={false}
  to="/"
/>
`;

exports[`<Link /> render matches inverse link snapshot 1`] = `
<Linkstyles__StyledLink
  bold={false}
  hard={false}
  inverse={true}
  onClick={[Function]}
  spaced={false}
  to="/"
/>
`;
